fix: update header height and alignment

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html {
 
 .header ul {
   display: flex;
+  margin-left: 250px;
   justify-content: flex-start;
   align-items: center;
   gap: 15px;
@@ -53,7 +54,7 @@ html {
 
 .sidebar{
   position: fixed;
-  z-index: 3;
+  z-index: 2;
   width: 250px;
   top: 60px;
   bottom: 0;
@@ -100,6 +101,7 @@ html {
   padding: 20px;
   background-color: #FAF3E0;
   text-align: left;
+  z-index: 3;
 }
 
 .content h1 {
